# bc_tenant_app

./: .env  .example.env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  manage.py  pyproject.toml
tenant_app/: admin.py  business_logic.py  decorators.py  forms.py  managers.py  middleware.py  models.py  urls.py  views.py
tenant_app/migrations/: 0001_initial.py  0002_message_mailinglist.py  0003_mesin.py
tenant_app/services/: business_logic.py
tenant_app/static/css/: jadmin.css  main.css
tenant_app/static/js/: multi-input.js
tenant_app/templates/tenant_app/: base.html  detail_mes.html  email_list.html  email_list_out.html  in_messages.html  login.html  main_page.html  out_messages.html  send_mes.html  user_list.html  users.html
tenant_project/: asgi.py  settings.py  urls.py  wsgi.py
